@@ -2,6 +2,10 @@
 
 	* modules/dbus/configure.in (dbus_int64_t, dbus_int32_t, dbus_uint32_t)
 	(dbus_int16_t, dbus_unichar_t, dbus_bool_t): check types
+	* modules/dbus/dbus.lisp (def-c-const): import from EXPORTING;
+	pass DBusError by reference using (c-pointer DBusError) instead of
+	returning a fresh object using (error (c-ptr DBusError) :in-out) et al;
+	(DBusMessageIter): add def-c-type
 
 2008-08-20  Sam Steingold  <sds@gnu.org>
 
